Fixed social icon alignment

--- a/resources/assets/css/sidebar.css
+++ b/resources/assets/css/sidebar.css
@@ -170,13 +170,14 @@
     .sidebar-nav li div.nav-footer {
         text-indent: 16px;
         line-height: 36px;
-        position: absolute;
-        bottom:40px;
+        position: fixed;
+        bottom:0;
         left:0;
         right:0;
         text-align:left;
         background-color:#000;
-        min-width:263px;
+        width:100%;
+        min-width:250px;
         border-top-style: solid;
     }
 
